--- a/app/src/main/res/layout/fragment_create_team.xml
+++ b/app/src/main/res/layout/fragment_create_team.xml
@@ -166,6 +166,7 @@
                 android:background="@drawable/round_boder"
                 android:padding="@dimen/_12dp"
                 android:paddingTop="@dimen/_5dp"
+                android:inputType="number"
                 android:paddingBottom="@dimen/_5dp"
                 android:textSize="@dimen/_12dp" />
 
@@ -233,7 +234,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight=".6"
-                        android:text="Team Thumblin"
+                        android:text="Team Image"
                         android:textSize="@dimen/_12dp"
                         android:textStyle="bold" />
 
