--- a/app/src/main/res/layout/fragment_teame.xml
+++ b/app/src/main/res/layout/fragment_teame.xml
@@ -69,7 +69,7 @@
             android:layout_height="match_parent"
             android:layout_weight="0.8"
             android:backgroundTint="@color/transparentWhite"
-            android:hint="Search your Stuf here"
+            android:hint="Search team by Id"
             android:padding="@dimen/_2dp"
             android:textColor="@color/black"
             android:textSize="@dimen/_12dp" />
@@ -106,6 +106,7 @@
             android:layout_marginRight="5dp"
             android:layout_weight=".4"
             android:gravity="center"
+            android:visibility="gone"
             android:orientation="horizontal">
 
             <com.kredivation.aakhale.components.ASTFontTextIconView
