--- a/app/src/main/res/layout/fragment_ground.xml
+++ b/app/src/main/res/layout/fragment_ground.xml
@@ -28,7 +28,7 @@
             android:layout_height="match_parent"
             android:layout_weight="0.8"
             android:backgroundTint="@color/transparentWhite"
-            android:hint="Search here"
+            android:hint="Search ground by Id"
             android:padding="@dimen/_2dp"
             android:textColor="@color/black"
             android:textSize="@dimen/_12dp" />
@@ -65,6 +65,7 @@
             android:layout_marginRight="5dp"
             android:layout_weight=".4"
             android:gravity="center"
+            android:visibility="gone"
             android:orientation="horizontal">
 
             <com.kredivation.aakhale.components.ASTFontTextIconView
