--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -40,14 +40,22 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginRight="@dimen/_35dp"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="My Profile"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_16dp" />
 
-
+                <TextView android:id="@+id/editprofile"
+                    android:layout_width="@dimen/_90dp"
+                    android:layout_height="@dimen/_30dp"
+                    android:gravity="center"
+                    android:text="Edit"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/_4dp"
+                    android:background="@drawable/button_round_white"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_14dp" />
             </LinearLayout>
         </android.support.v7.widget.Toolbar>
 
@@ -109,8 +117,7 @@
                 android:text=""
                 android:textAlignment="center"
                 android:textColor="@color/text_color"
-                android:textSize="@dimen/_12dp"
-                />
+                android:textSize="@dimen/_12dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -141,7 +148,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.7"
-                            android:text="30"
+                            android:text=""
                             android:textSize="@dimen/_12dp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -459,12 +466,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginRight="@dimen/_10dp"
                     android:layout_marginLeft="@dimen/_10dp"
+                    android:layout_marginRight="@dimen/_10dp"
                     android:layout_marginBottom="@dimen/_10dp"
                     android:orientation="vertical" />
 
             </LinearLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
+
 </LinearLayout>
